--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -79,4 +79,5 @@
     <string name="downloading_file">Téléchargement en cours</string>
     <string name="help">WLED Aide</string>
     <string name="support_me">Supporter Moustachauve</string>
+    <string name="offline_devices">Appareils hors-ligne</string>
 </resources>
