--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -96,4 +96,5 @@
     <string name="websocket_connected">Connecté</string>
     <string name="websocket_connecting">Connexion…</string>
     <string name="websocket_disconnected">Déconnecté</string>
+    <string name="mac_address_present">Adresse MAC: %1$s</string>
 </resources>
