--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,4 +98,5 @@
     <string name="websocket_connected">Connected</string>
     <string name="websocket_connecting">Connecting…</string>
     <string name="websocket_disconnected">Disconnected</string>
+    <string name="mac_address_present">MAC address: %1$s</string>
 </resources>
