--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -98,4 +98,5 @@
     <string name="websocket_connected">已连接</string>
     <string name="websocket_connecting">正在连接…</string>
     <string name="websocket_disconnected">已断开连接</string>
-</resources>
+    <string name="mac_address_present">MAC 地址：%1$s</string>
+    </resources>
