--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,97 +1,101 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name" translatable="false">WLED Native</string>
     <string name="app_logo">WLED Logo</string>
     <string name="add_a_device">Füge ein Gerät hinzu</string>
-    <string name="looking_for_devices">Geräte werden erkannt</string>
-    <string name="ip_address_or_url">IP Adresse oder URL</string>
+    <string name="add">Hinzufügen</string>
+    <string name="add_adding_device"><xliff:g example="192.168.1.1" id="strength">%1$s</xliff:g> wird hinzugefügt</string>
+    <string name="add_device_added"><xliff:g example="Device123" id="strength">%1$s</xliff:g> wurde hinzugefügt</string>
+    <string name="add_device_error">Verbindung zum Gerät fehlgeschlagen. Überprüfen Sie die Adresse.</string>
+    <string name="deleting_device">Gerät löschen?</string>
+    <string name="delete">Löschen</string>
+    <string name="ip_address_or_url">IP-Adresse oder URL</string>
     <string name="custom_name">Benutzerdefinierter Name</string>
-    <string name="leave_this_empty_to_use_the_device_name">Lasse dieses Feld leer um den Gerätenamen zu verwenden</string>
+    <string name="leave_this_empty_to_use_the_device_name">Lasse dieses Feld leer, um den Gerätenamen zu verwenden</string>
     <string name="please_enter_value">Bitte gib einen Wert ein</string>
     <string name="please_enter_valid_value">Bitte gib einen gültigen Wert ein</string>
     <string name="cancel">Abbrechen</string>
-    <string name="close">Schließen</string>
     <string name="default_device_name">(Neues Gerät)</string>
-    <string name="default_ip" translatable="false">0.0.0.0</string>
     <string name="is_offline">Offline</string>
+    <string name="offline_less_than_minute">Offline, vor weniger als einer Minute</string>
+    <plurals name="offline_minutes">
+        <item quantity="one">Offline, vor %d Minute</item>
+        <item quantity="other">Offline, vor %d Minuten</item>
+    </plurals>
+    <plurals name="offline_hours">
+        <item quantity="one">Offline, vor %d Stunde</item>
+        <item quantity="other">Offline, vor %d Stunden</item>
+    </plurals>
+    <plurals name="offline_days">
+        <item quantity="one">Offline, vor %d Tag</item>
+        <item quantity="other">Offline, vor %d Tagen</item>
+    </plurals>
     <string name="update_available">Update verfügbar</string>
     <string name="network_status">Netzwerkstatus</string>
-    <string name="refresh_list">Liste aktualisieren</string>
+    <string name="signal_strength">Signalstärke: <xliff:g example="-62" id="strength">%1$s</xliff:g></string>
+    <string name="battery_percentage">Batterie:</string>
     <string name="refresh_page">Seite aktualisieren</string>
-    <string name="manage_devices">Geräte verwalten</string>
-    <string name="remove">Entfernen</string>
     <string name="edit_device">Gerät bearbeiten</string>
     <string name="edit_device_with_name">Gerät bearbeiten - <xliff:g example="WLED" id="device_name">%1$s</xliff:g></string>
-    <string name="remove_device">Gerät entfernen</string>
-    <string name="remove_device_confirm">Wirklich ein Gerät entfernen?</string>
-    <string name="remove_device_confirm_text">Willst du %1$s [%2$s] wirklich entfernen?</string>
-    <string name="save_device">Gerät speichern</string>
-    <string name="hide_device">Gerät verbergen</string>
+    <string name="device_is_visible">Gerät ist sichtbar</string>
     <string name="device_is_hidden">Gerät ist verborgen</string>
-    <string name="hidden_status">[Verborgen]</string>
-    <string name="navigate_forward">Gehe vorwärts</string>
-    <string name="navigate_backward">Gehe zurück</string>
-    <string name="you_dont_have_any_devices_yet">Du hast noch keine Geräte</string>
-    <string name="find_my_device">Finde mein Gerät</string>
+    <string name="hidden_status">(Verborgen)</string>
+    <string name="you_dont_have_any_visible_devices">Du hast keine sichtbaren Geräte</string>
     <string name="awkward_akemi_character">Awkward Akemi Charakter</string>
-    <string name="device_list">Meine Geräte</string>
-    <string name="new_device_found">Neues Gerät erkannt</string>
-    <string name="device_view">Geräteansicht</string>
-    <string name="select_a_device">Wähle ein Gerät aus</string>
     <string name="settings">Einstellungen</string>
     <string name="theme">Thema</string>
     <string name="light">Hell</string>
     <string name="dark">Dunkel</string>
     <string name="system_default">Systemeinstellungen</string>
     <string name="listing_options">Listenoptionen</string>
+    <string name="discovering_devices">Suche Geräte</string>
     <string name="automatically_discover_new_devices">Neue Geräte automatisch erkennen</string>
+    <string name="show_hidden_devices">Verborgene Geräte anzeigen</string>
+    <string name="hide_hidden_devices">Verborgene Geräte ausblenden</string>
     <string name="show_offline_devices_last">Zeige Geräte, die offline sind, als letztes an</string>
-    <string name="description_brightness_slider">Helligkeitsregler</string>
-    <string name="description_menu_button">Öffne Menü</string>
-    <string name="description_back_button">Gehe zurück</string>
-    <string name="description_list_of_discovered_devices">Liste erkannter Geräte</string>
-    <string name="privacy">Privatsphäre</string>
-    <string name="send_crash_data_to_developer">Sende Absturzdaten an Entwickler</string>
-    <string name="send_performance_data_to_developer">Sende Performancedaten an Entwickler</string>
-    <string name="device_ap_mode">WLED AP-Modus</string>
+    <string name="description_menu_button">Menü öffnen</string>
+    <string name="description_back_button">Zurück</string>
     <string name="device_ap_mode_detected">WLED AP-Modus erkannt</string>
-    <string name="device_ap_mode_detected_click">Klicke hier um das Gerät zu öffnen</string>
+    <string name="device_ap_mode_detected_click">Hier klicken, um das Gerät zu öffnen</string>
     <string name="install">Installieren</string>
     <string name="later">Später</string>
-    <string name="skip_this_version">Überspringe diese Version</string>
-    <string name="properties">Eigenschaften</string>
-    <string name="check_for_update">Suche nach Updates</string>
+    <string name="skip_this_version">Überspringen</string>
+    <string name="check_for_update">Nach Updates suchen</string>
     <string name="from_version_to_version">
-        Von <xliff:g example="v0.13.0" id="old_version">%1$s</xliff:g> zu <xliff:g example="v0.14.0" id="new_version">%2$s</xliff:g>
+        Von <xliff:g example="v0.13.0" id="old_version">%1$s</xliff:g> auf <xliff:g example="v0.14.0" id="new_version">%2$s</xliff:g>
     </string>
-    <string name="see_update_details">Siehe Update</string>
-    <string name="checking_progress_update">Am Überprüfen…</string>
-    <string name="updating">Update läuft %1$s</string>
-    <string name="please_do_not_close_the_app_or_turn_off_the_device">Bitte schließe nicht die App und schalte nicht das Gerät aus.</string>
-    <string name="starting_up">Am Hochfahren</string>
+    <string name="see_update_details">Details anzeigen</string>
+    <string name="checking_progress_update">Überprüfe…</string>
+    <string name="updating">Aktualisiere %1$s</string>
+    <string name="please_do_not_close_the_app_or_turn_off_the_device">Bitte schließe die App nicht und schalte das Gerät nicht aus.</string>
+    <string name="starting_up">Startet</string>
     <string name="downloading_version">Version wird heruntergeladen</string>
     <string name="installing_update">Update wird installiert</string>
     <string name="update_failed">Update fehlgeschlagen</string>
     <string name="done">Fertig</string>
-    <string name="update_completed">Update vollständig!</string>
-    <string name="are_you_sure">Bist du dir sicher?</string>
-    <string name="device_update_disclaimer_part1">Du bist dabei, eine neue Version von WLED zu installieren. Wenn du vorher eine angepasste Version installiert hattest, könnte es sein, dass du ein paar Funktionen verlierst (wenn du beispielsweise Usermods aktiviert hattest, könnten diese nicht mehr funktionieren).</string>
-    <string name="device_update_disclaimer_part2">Wenn jemand dieses Gerät für dich installiert hat, solltest du diese Person vielleicht fragen, ob es in Ordnung ist, dieses Gerät auf eine neue Version zu updaten.</string>
-    <string name="device_update_disclaimer_part3">WLED und WLED Native sind nicht dafür verantwortlich, wenn etwas wegen eines Updates schiefläuft.</string>
-    <string name="install_update">Update wird installiert</string>
-    <string name="ota_install_failed_device_locked">Dein Gerät könnte durch eine PIN geschützt oder mit einer Passphrase verschlüsselt sein.</string>
+    <string name="update_completed">Update abgeschlossen!</string>
+    <string name="are_you_sure">Bist du sicher?</string>
+    <string name="device_update_disclaimer_part1">Du bist dabei, eine neue Version von WLED zu installieren. Wenn du zuvor eine angepasste Version installiert hattest, könnten einige Funktionen verloren gehen (z. B. wenn du Usermods aktiviert hattest, funktionieren diese möglicherweise nicht mehr).</string>
+    <string name="device_update_disclaimer_part2">Wenn jemand dieses Gerät für dich installiert hat, solltest du diese Person fragen, ob ein Update des Geräts in Ordnung ist.</string>
+    <string name="device_update_disclaimer_part3">WLED ist nicht verantwortlich, wenn durch ein Update etwas schiefgeht.</string>
+    <string name="install_update">Update installieren</string>
+    <string name="ota_install_failed_device_locked">Dein Gerät könnte durch eine PIN geschützt oder gesperrt sein.</string>
     <string name="no_compatible_version_found">Keine kompatible Version gefunden</string>
-    <string name="no_compatible_version_found_details">Es wurde keine Version gefunden, die mit deinem Gerät kompatibel ist. Du musst dein Gerät manuell updaten.</string>
-    <string name="device_offline">Gerät Offline</string>
+    <string name="no_compatible_version_found_details">Es wurde keine Version gefunden, die mit deinem Gerät kompatibel ist. Du musst dein Gerät manuell aktualisieren.</string>
     <string name="show_error">Fehler anzeigen</string>
     <string name="hide_error">Fehler verbergen</string>
-    <string name="update_channel">Updatekanal</string>
+    <string name="unknown_error">Unbekannter Fehler</string>
+    <string name="success">Erfolg!</string>
+    <string name="update_channel">Update-Kanal</string>
     <string name="stable">Stable</string>
     <string name="beta">Beta</string>
-    <string name="your_device_is_up_to_date">Dein Gerät verfügt über die neueste Version</string>
+    <string name="your_device_is_up_to_date">Dein Gerät ist auf dem neuesten Stand</string>
     <string name="version_v_num">Version <xliff:g example="v0.14.0" id="version_name">%1$s</xliff:g></string>
-    <string name="select_a_device_from_the_list">Wähle ein Gerät aus der Liste aus</string>
-    <string name="save_after_branch_change">Speichere das Gerät, nachdem du den Updatekanal gewechselt hast, um nach Updates zu suchen</string>
+    <string name="select_a_device_from_the_list">Wähle ein Gerät aus der Liste</string>
     <string name="downloading_file">Datei wird heruntergeladen</string>
     <string name="help">WLED Hilfe</string>
     <string name="support_me">Unterstütze Moustachauve</string>
+    <string name="offline_devices">Offline Geräte</string>
+    <string name="websocket_connected">Verbunden</string>
+    <string name="websocket_connecting">Verbinde…</string>
+    <string name="websocket_disconnected">Getrennt</string>
+    <string name="mac_address_present">MAC-Adresse: %1$s</string>
 </resources>
