Feat: Replace WebView error page with native screen
- Replaced the HTML-based `device_error.html` with a native Jetpack Compose error screen (`DeviceErrorScreen`).
- The new screen is displayed within `DeviceWebview` when a main frame loading error occurs.
- Added new string resources for the error title, message, and a "Retry" button.
- Updated `WebViewState` to track and save the error state.

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -97,4 +97,7 @@
     <string name="websocket_connecting">Connexion…</string>
     <string name="websocket_disconnected">Déconnecté</string>
     <string name="mac_address_present">Adresse MAC: %1$s</string>
+    <string name="device_error_title">Impossible de joindre l\'appareil sélectionné</string>
+    <string name="device_error_message">Assurez-vous qu\'il est branché et connecté au réseau</string>
+    <string name="retry_connection">Réessayer</string>
 </resources>
