feat: Improve file download handling in WebView
This commit enhances the file download functionality within the device WebView:

- **Data URI Support:** Adds support for downloading files from `data:` URIs, specifically for Base64 encoded content. This is common for configuration backups (`wled_presets.json`, `wled_config.json`).
- **Improved UX:**
    - A "Download complete" snackbar now appears at the bottom of the screen upon success.
    - The snackbar includes an "Open" action to view the downloads folder and a "Dismiss" action.
    - The "Downloading..." toast message now includes the filename.
- **Robust Filename Generation:**
    - Creates a standardized and filesystem-safe filename for all downloads, incorporating the device name, date, and original filename (e.g., `DeviceName_20260105_wled_backup.json`).
- **Error Handling & Strings:**
    - Adds new user-facing strings for various download states (success, failure, unsupported schemes, etc.) and provides French and Chinese translations.
    - Restricts downloads to Android 10+ due to simpler file-saving mechanisms, with a message for older versions.
- **Code Refactoring:**
    - The `downloadListener` is refactored to handle `http/https` and `data` schemes separately.
    - A `BroadcastReceiver` is used to reliably detect when a `DownloadManager` task is complete.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,7 +91,6 @@
     <string name="your_device_is_up_to_date">Your device is up to date</string>
     <string name="version_v_num">Version <xliff:g example="v0.14.0" id="version_name">%1$s</xliff:g></string>
     <string name="select_a_device_from_the_list">Select a device from the list</string>
-    <string name="downloading_file">Downloading File</string>
     <string name="help">WLED Help</string>
     <string name="support_me">Support Moustachauve</string>
     <string name="offline_devices">Offline Devices</string>
@@ -102,4 +101,16 @@
     <string name="device_error_title">The selected device could not be reached</string>
     <string name="device_error_message">Make sure it is plugged in and connected to the network</string>
     <string name="retry_connection">Retry Connection</string>
+    <string name="downloading_file">Downloading %1$s…</string>
+    <string name="download_completed">Download complete</string>
+    <string name="download_scheme_not_supported">Download not supported for scheme: %1$s</string>
+    <string name="download_failed">Download failed: %1$s</string>
+    <string name="download_not_supported_old_android">This download feature requires Android 10 or newer</string>
+    <string name="file_creation_failed">Failed to create file</string>
+    <string name="error_saving_file">Error saving file</string>
+    <string name="invalid_data_uri">Invalid data URI format</string>
+    <string name="non_base64_not_supported">Non-base64 data URIs are not currently supported</string>
+    <string name="open">Open</string>
+    <string name="dismiss">Dismiss</string>
+
 </resources>
