--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -89,7 +89,7 @@
     <string name="version_v_num">Version <xliff:g example="v0.14.0" id="version_name">%1$s</xliff:g></string>
     <string name="your_device_is_up_to_date">Votre appareil est à jour</string>
     <string name="select_a_device_from_the_list">Veuillez choisir un appareil</string>
-    <string name="downloading_file">Téléchargement en cours</string>
+    <string name="downloading_file">Téléchargement de %1$s…</string>
     <string name="help">WLED Aide</string>
     <string name="support_me">Supporter Moustachauve</string>
     <string name="offline_devices">Appareils hors-ligne</string>
@@ -100,4 +100,14 @@
     <string name="device_error_title">Impossible de joindre l\'appareil sélectionné</string>
     <string name="device_error_message">Assurez-vous qu\'il est branché et connecté au réseau</string>
     <string name="retry_connection">Réessayer</string>
+    <string name="download_completed">Téléchargement terminé</string>
+    <string name="download_scheme_not_supported">Téléchargement non pris en charge pour le protocole : %1$s</string>
+    <string name="download_failed">Échec du téléchargement : %1$s</string>
+    <string name="download_not_supported_old_android">Cette fonctionnalité nécessite Android 10 ou plus récent</string>
+    <string name="file_creation_failed">Échec de la création du fichier</string>
+    <string name="error_saving_file">Erreur lors de l\'enregistrement du fichier</string>
+    <string name="invalid_data_uri">Format d\'URI de données invalide</string>
+    <string name="non_base64_not_supported">Les URI de données non-Base64 ne sont pas prises en charge</string>
+    <string name="open">Ouvrir</string>
+    <string name="dismiss">Fermer</string>
 </resources>
