Feat: Add translation for hidden devices string
- Added `some_devices_hidden` string resource.
- Provided translations for French and Chinese.
- Replaced hardcoded text in `NoDeviceItem.kt` with the new string resource.

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -110,4 +110,5 @@
     <string name="non_base64_not_supported">Les URI de données non-Base64 ne sont pas prises en charge</string>
     <string name="open">Ouvrir</string>
     <string name="dismiss">Fermer</string>
+    <string name="some_devices_hidden">Vous avez des appareils cachés</string>
 </resources>
