--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -111,4 +111,5 @@
     <string name="non_base64_not_supported">暂不支持非 Base64 数据 URI</string>
     <string name="open">打开</string>
     <string name="dismiss">关闭</string>
+    <string name="some_devices_hidden">你有已隐藏的设备</string>
 </resources>
