feat: Add deep linking support for wled:// scheme and AP mode
Implement deep linking to allow external apps and browsers to open
specific WLED devices via custom URL schemes.

## Features
- Support wled://{mac_address} to navigate directly to a device
- Support wled://{ip_or_hostname} with auto-discovery for unknown devices
- Support http://4.3.2.1 for WLED AP mode access
- Dismissable loading dialog during device discovery
- Error dialog when device cannot be reached

## Changes
- Add intent filters in AndroidManifest.xml for deep link handling
- Create DeepLinkHandler domain class for parsing deep link URIs
- Add DeepLinkState sealed class in MainViewModel for state management
- Integrate with DeviceFirstContactService for auto-discovery
- Make MAC address lookup case-insensitive in DeviceDao
- Rename EXTRA_DEVICE_ADDRESS to EXTRA_DEVICE_MAC_ADDRESS for clarity
- Add French and Chinese translations for deep link strings
- Add Robolectric for unit testing Android APIs
- Configure detekt to ignore @Preview annotated functions

## Testing
- Add 25 unit tests for DeepLinkHandler (URI parsing, MAC validation)

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -111,4 +111,10 @@
     <string name="open">Ouvrir</string>
     <string name="dismiss">Fermer</string>
     <string name="some_devices_hidden">Vous avez des appareils cachés</string>
+
+    <!-- Deep linking -->
+    <string name="deep_link_loading">Connexion à l\'appareil…</string>
+    <string name="deep_link_error_title">Appareil introuvable</string>
+    <string name="deep_link_error_mac_not_found">L\'appareil avec l\'adresse MAC %1$s n\'a pas été trouvé dans votre liste</string>
+    <string name="deep_link_error_unreachable">Impossible de joindre l\'appareil à %1$s. Assurez-vous qu\'il est allumé et connecté au réseau.</string>
 </resources>
