feat: Display last updated time as a chronometer in widgets
- Introduces an `ElapsedTimeChronometer` composable that displays a live-ticking "last updated" time.
- Uses a legacy `Chronometer` view via `AndroidRemoteViews` for efficient ticking without widget recomposition.
- Replaces the static timestamp text in the device widget with this new chronometer.
- Refactors widget content layout to use a common `DeviceWidgetContainer`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,6 +117,7 @@
     <string name="widget_description" tools:ignore="MissingTranslation">WLED Widget</string>
     <string name="widget_please_configure" tools:ignore="MissingTranslation">Please configure</string>
     <string name="select_a_device" tools:ignore="MissingTranslation">Select a Device</string>
+    <string name="last_updated" tools:ignore="MissingTranslation">Last Updated</string>
 
     <!-- Deep linking -->
     <string name="deep_link_loading">Connecting to device…</string>
