I18n: Add French and Chinese translations for widget strings
This commit adds French and Chinese (values-fr, values-zh) translations for widget-related strings:
- `widget_description`
- `widget_please_configure`
- `select_a_device`
- `last_updated`

It also removes the `tools:ignore="MissingTranslation"` attribute from the default English strings, as translations are now available.

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -112,6 +112,11 @@
     <string name="dismiss">Fermer</string>
     <string name="some_devices_hidden">Vous avez des appareils cachés</string>
 
+    <string name="widget_description">Widget WLED</string>
+    <string name="widget_please_configure">Veuillez configurer</string>
+    <string name="select_a_device">Sélectionnez un appareil</string>
+    <string name="last_updated">Dernière mise à jour</string>
+
     <!-- Deep linking -->
     <string name="deep_link_loading">Connexion à l\'appareil…</string>
     <string name="deep_link_error_title">Appareil introuvable</string>
