Feat: Localize Device Controls strings
- Add `control_on` and `control_off` string resources for Device Controls.
- Update `WledControlsService` to use these new translatable strings instead of hardcoded "On" and "Off".
- Provide translations for German, French, and Chinese.

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -124,4 +124,8 @@
     <string name="deep_link_error_mac_not_found">Gerät mit MAC-Adresse %1$s nicht in deiner Geräteliste gefunden</string>
     <string name="deep_link_error_unreachable">Konnte Gerät unter %1$s nicht erreichen. Stelle sicher, dass es eingeschaltet und mit dem Netzwerk verbunden ist.</string>
 
+    <!-- Device Controls (Quick Settings) -->
+    <string name="control_on">An</string>
+    <string name="control_off">Aus</string>
+
 </resources>
