--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -122,4 +122,9 @@
     <string name="deep_link_error_title">Appareil introuvable</string>
     <string name="deep_link_error_mac_not_found">L\'appareil avec l\'adresse MAC %1$s n\'a pas été trouvé dans votre liste</string>
     <string name="deep_link_error_unreachable">Impossible de joindre l\'appareil à %1$s. Assurez-vous qu\'il est allumé et connecté au réseau.</string>
+
+    <!-- Device Controls (Quick Settings) -->
+    <string name="control_on">Allumé</string>
+    <string name="control_off">Éteint</string>
+
 </resources>
