feat(widget): Add widget preview for Android 15
This commit adds support for widget previews, a feature introduced in Android 15 (Vanilla Ice Cream).

- A `WidgetPreviewPublisher` is added to manage the publishing of widget previews to the launcher, handling versioning to avoid unnecessary updates.
- The `Glance` library is updated to `1.2.0-rc01` to support the new preview APIs.
- The `WledWidget` now implements `providePreview` to render a static preview in the widget picker.
- The widget's description and name strings have been updated to be more descriptive.
- The widget's metadata (`wled_widget_info.xml`) has been adjusted for better sizing in the launcher.

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -113,7 +113,8 @@
     <string name="dismiss">Schließen</string>
     <string name="some_devices_hidden">Einige deiner Geräte sind verborgen</string>
     <!-- TODO: Translate the widget texts -->
-    <string name="widget_description">WLED Widget</string>
+    <string name="widget_single_device_name">Einzelgerät</string>
+    <string name="widget_description">Ein einzelnes WLED-Gerät steuern</string>
     <string name="widget_please_configure">Bitte konfigurieren</string>
     <string name="select_a_device">Wähle ein Gerät</string>
     <string name="last_updated">Zuletzt aktualisiert</string>
