--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -112,7 +112,8 @@
     <string name="dismiss">Fermer</string>
     <string name="some_devices_hidden">Vous avez des appareils cachés</string>
 
-    <string name="widget_description">Widget WLED</string>
+    <string name="widget_single_device_name">Appareil unique</string>
+    <string name="widget_description">Permet de voir et contrôler un seul appareil WLED</string>
     <string name="widget_please_configure">Veuillez configurer</string>
     <string name="select_a_device">Sélectionnez un appareil</string>
     <string name="last_updated">Dernière mise à jour</string>
