--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -110,7 +110,8 @@
     <string name="dismiss">关闭</string>
     <string name="some_devices_hidden">你有已隐藏的设备</string>
 
-    <string name="widget_description">WLED 小部件</string>
+    <string name="widget_single_device_name">单个设备</string>
+    <string name="widget_description">控制单个 WLED 设备</string>
     <string name="widget_please_configure">请配置</string>
     <string name="select_a_device">选择设备</string>
     <string name="last_updated">最后更新</string>
